<resources>
    <string name="app_name">被窝音乐</string>
    <array name="urls">
        <item>http://123.59.214.241:8000/static/images/11.jpg</item>
        <item>http://123.59.214.241:8000/static/images/12.jpg</item>
        <item>http://123.59.214.241:8000/static/images/13.jpg</item>
        <item>http://123.59.214.241:8000/static/images/14.jpg</item>
        <item>http://123.59.214.241:8000/static/images/13.jpg</item>

    </array>
    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="setting_key_filter_size">filter_size</string>
    <string name="setting_key_filter_time">filter_time</string>
    <string name="play_time_start">00:00</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="unknown">未知</string>
    <string name="mine_feedback_hint">猫窝音乐的每一个进步都离不开猫迷的意见和建议</string>
    <string name="mine_feedback_contact">手机/QQ/邮箱</string>
    <string name="mine_submit">提交</string>
    <string name="mine_feedback_content_tip">请输入您的意见和建议</string>
    <string name="mine_feedback_contact_tip">请输入您的联系方式</string>
    <string name="mine_user_info_avatar">头像</string>
    <string name="mine_user_info_nickname">昵称</string>
    <string name="mine_user_input_nickname">请填写您的昵称</string>
    <string name="mine_user_info_gender">性别</string>
    <string name="mine_user_info_man">男</string>
    <string name="mine_user_info_woman">女</string>
    <string name="mine_user_info_age">年龄</string>
    <string name="mine_user_info_save">保存</string>
    <string name="submit">提交</string>
</resources>
