<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_FFE8E8E8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_FF10BBE6">

        <ImageButton
            android:id="@+id/iv_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@null"
            android:src="@mipmap/while_back_left_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_16_dm"
            android:text="个人资料"/>

        <Button
            android:id="@+id/iv_save"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_14_dm"
            android:text="@string/mine_user_info_save"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:background="@color/c_FFFFFFFF">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_16_dm"
            android:text="@string/mine_user_info_avatar"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@mipmap/avator_img"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:background="@color/c_FFFFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16_dm"
            android:text="@string/mine_user_info_nickname"/>

        <EditText
            android:id="@+id/nick_name"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:lines="1"
            android:hint="@string/mine_user_input_nickname"
            android:textColor="@color/c_B2B2B2"
            android:textSize="@dimen/text_14_dm"
            android:text=""/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="-1dp"
        android:background="#dcdcdc"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/c_FFFFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16_dm"
            android:text="@string/mine_user_info_gender"/>

        <Button
            android:id="@+id/woman_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/mine_user_info_woman"
            android:background="@null"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/main_live_face_dot"/>

        <Button
            android:id="@+id/man_btn"
            android:layout_toLeftOf="@+id/woman_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:text="@string/mine_user_info_man"
            android:background="@null"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/main_live_face_dot"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="-1dp"
        android:background="#dcdcdc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:background="@color/c_FFFFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16_dm"
            android:text="@string/mine_user_info_age"/>

        <EditText
            android:id="@+id/iv_age"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:lines="1"
            android:hint="@string/mine_user_info_age"
            android:textSize="@dimen/text_14_dm"
            android:inputType="number"
            android:maxLength="2"
            android:text=""/>

    </LinearLayout>

</LinearLayout>